feat:AS 조회 목록 Excel 저장

--- a/KccBrew/.settings/org.eclipse.wst.common.component
+++ b/KccBrew/.settings/org.eclipse.wst.common.component
@@ -10,7 +10,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources/config"/>
         		
         <property name="java-output-path" value="target/classes"/>
-        <property name="context-root" value="/"/>
+        <property name="context-root" value="kccbrew"/>
         	
     </wb-module>
     
