--- a/KccBrew/src/main/webapp/resources/css/comm/register.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/register.css
@@ -48,7 +48,7 @@
 	padding: 20px;
 	border: 1px solid #888;
 	width: 30%;
-	height: 55%;
+	height: 45%;
 	border-radius: 20px;
 	display: flex;
 	flex-direction: column;
@@ -62,13 +62,10 @@
 	color:#fff; 
 	text-align:center;
 }
-.search-store-content>table{
-	height:70%;
-	margin:3% 0%;
-}
 .search-input{
 	margin:3% 0%;
 	line-height: 2;
+	width:100%;
 }
 .register-msg{
 	margin:0px;
@@ -295,3 +292,76 @@
  input[type=file]{
  	padding-bottom:30px;
  }
+#search-box {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+#search-box th, #search-box td {
+	padding: 10px;
+	border: 0px;
+	border-bottom: 1px solid #ccc;
+	text-align: center;
+}
+
+#strTable {
+	width: 100%;
+	margin: auto;
+	height: 80%;
+}
+
+#strTable table {
+	border-collapse: collapse;
+	margin: auto;
+	width: 100%;
+	height: 80%;
+}
+#strTable table thead{
+	font-weight: bolder;
+}
+
+#strTable th, td {
+	text-align: left !important;
+	padding: 8px !important;
+	text-align: center !important;
+}
+.page-btn {
+	display: flex;
+	height: 36px;
+	text-align: center;
+	line-height: 33px;
+	margin: 0 5px;
+	text-decoration: none;
+	color: black;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	align-content: center;
+	justify-content: center;
+	align-items: center;
+}
+.pagination a img {
+	margin-right: 5px; /* 각 링크 사이 간격 조절 */
+	height: 15px;
+}
+.selected {
+	display: inline-block;
+	width: 35px;
+	height: 36px;
+	text-align: center;
+	line-height: 33px;
+	border-radius: 50%;
+	margin: 0 5px;
+	color: white !important;
+	background-color: navy;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+.pagination .selected {
+	/* 선택된 페이지 스타일 */
+	font-weight: bold;
+	border-radius: 50%;
+}
+.paging a{
+	align-self:center;
+}
