--- a/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu.css
@@ -1,4 +1,7 @@
 @charset "UTF-8";
+
+
+
 /************* 회원 정보 및 페이지 링크 ******************/
 	.profileAndguide{
 		font-family: 'Noto-Sans';
@@ -66,7 +69,7 @@
 	.buttons form {
 		display: inline-block;
 	}
-	.toMyPage, .logout {
+	#toMyPage, .logout {
 		color:#ffffff;
 		cursor: pointer;
 		font-weight: normal;
@@ -74,7 +77,7 @@
 		margin-bottom: 10px;
 		text-decoration: none;
 	}
-	.toMyPage:hover, .logout:hover {
+	#toMyPage:hover, .logout:hover {
 		text-decoration: underline;
 	}
 	.shortcut-service {
