--- a/KccBrew/.settings/org.eclipse.wst.common.component
+++ b/KccBrew/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources/config"/>
         <property name="java-output-path" value="/KccBrew/target/classes"/>
-        <property name="context-root" value="/"/>
+        <property name="context-root" value="kccbrew"/>
     </wb-module>
 </project-modules>
