--- a/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu.css
@@ -1,7 +1,4 @@
 @charset "UTF-8";
-
-
-
 /************* 회원 정보 및 페이지 링크 ******************/
 	.profileAndguide{
 		font-family: 'Noto-Sans';
@@ -66,14 +63,7 @@
 		text-align: center;
 		height:30px;
 	}
-<<<<<<< HEAD
-	.buttons form {
-		display: inline-block;
-	}
-	#toMyPage, .logout {
-=======
 	.toMyPage, .logout {
->>>>>>> branch 'master' of https://github.com/Yunjinho/kccbrew.git
 		color:#ffffff;
 		cursor: pointer;
 		font-weight: normal;
@@ -81,7 +71,7 @@
 		margin-bottom: 10px;
 		text-decoration: none;
 	}
-	#toMyPage:hover, .logout:hover {
+	.toMyPage:hover, .logout:hover {
 		text-decoration: underline;
 	}
 	.shortcut-service {
