--- a/KccBrew/src/main/webapp/resources/css/asMng/asDetail.css
+++ b/KccBrew/src/main/webapp/resources/css/asMng/asDetail.css
@@ -174,3 +174,54 @@ a{
 input[type=file]{
 	margin-bottom:10px;
 }
+
+.modal-result{
+	display: none; /* 모달 초기에는 숨김 상태로 설정 */
+	position: fixed; /* 화면에 고정 */
+	z-index: 1; /* 다른 요소보다 위에 표시되도록 설정 */
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5); /* 반투명한 배경 색상 */
+	text-align: center;
+}
+.result-content{
+	background-color: #fefefe;
+	margin: 10% auto; /* 모달을 수직, 수평 가운데로 위치시킴 */
+	padding: 20px;
+	border: 1px solid #888;
+	width: 30%;
+	border-radius: 20px;
+	display: flex;
+	flex-direction: column;
+}
+.result-content>form>div{
+	margin:30px;
+	display: flex;
+}
+.result-form fieldset{
+    display: inline-block;
+    direction: rtl;
+    border:0;
+}
+.result-form fieldset legend{
+    text-align: right;
+}
+.result-form input[type=radio]{
+    display: none;
+}
+.result-form label{
+    font-size: 3em;
+    color: transparent;
+    text-shadow: 0 0 0 #f0f0f0;
+}
+.result-form label:hover{
+    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
+}
+.result-form label:hover ~ label{
+    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
+}
+.result-form input[type=radio]:checked ~ label{
+    text-shadow: 0 0 0 rgba(250, 208, 0, 0.99);
+}
