--- a/KccBrew/src/main/webapp/resources/css/schdl/myschedulelist.css
+++ b/KccBrew/src/main/webapp/resources/css/schdl/myschedulelist.css
@@ -33,7 +33,7 @@
 .form-btn-box {
 	margin: 10px;
 	display: flex;
-	justify-content: center;
+	justify-content: flex-end;
 }
 
 /* 탭메뉴 */
@@ -263,7 +263,7 @@
 }
 
 #modalContent {
-	    margin: 10px 0;
+	margin: 10px 0;
 }
 
 /* 닫기 버튼 스타일 */
@@ -277,13 +277,13 @@
 }
 
 #modalHeader {
-    background-color: #473736;
-    width: 100%;
-    height: 2em;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 15px;
-    align-items: center;
+	background-color: #473736;
+	width: 100%;
+	height: 2em;
+	display: flex;
+	justify-content: space-between;
+	padding: 0 15px;
+	align-items: center;
 }
 
 #contentTitle {
@@ -291,5 +291,15 @@
 }
 
 .scale-element {
-    transform-origin: top left; /* 변환 기준점 설정 */
+	transform-origin: top left; /* 변환 기준점 설정 */
+}
+
+/* 검색창 */
+#yearSelect {
+	width: -webkit-fill-available;
+}
+
+#dateSelect {
+	display: flex;
+	justify-content: space-around;
 }
