--- a/KccBrew/src/main/webapp/resources/css/comm/mainLayout2.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/mainLayout2.css
@@ -27,3 +27,13 @@ html {
 }
 #mainFooter {
 }
+#page-container {  
+	background-color: #eef4ff !important;
+}
+#page-content{
+ padding: 20px 20px;
+}
+
+#page-content-wrap{
+ background-color:#ffffff;
+}
