--- a/KccBrew/src/main/webapp/resources/css/comm/myPage.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/myPage.css
@@ -12,34 +12,73 @@
 }
 
 .header-icon-background {
+	position:relative;
 	width: 20px;
-	height: 20px; 
+	height: 20px;
+	top:6.5px;
 }
 
 .breadcrumb {
+	height:60.67px;
 	display: flex;
+	margin: 0px;
+	background-color: transparent;
+	border: 0px;
+	border-radius: 0px;
+	margin: 0px 40px;
+	color: #666;
+	border-bottom: 1px solid #d9dbdb;
+	padding: 8px 0;
+	font-size: 12px
 }
 
-.breadcrumb li {
-	display: inline-flex;
+.breadcrumb-home {
+	display:inline-block;
+	width:45.9px;
+}
+.right-arrow {
+	position: relative;
+}
+
+.container2 .page-content-navigation .breadcrumb li {
+	color: #666;
+	display: block;
+	white-space: nowrap;
+	text-overflow: ellipsis
+}
+.container2 .page-content-navigation .breadcrumb li:first-child {
+	background: none;
+	padding-left: 3px;
+}
+
+.container2 .page-content-navigation .breadcrumb li:last-child {
+	color: #333;
+	font-weight: bold;
+}
+
+.myInfo-wrapper {
+	padding: 32px 40px;
+}
+
+.container2 .page-content-navigation .breadcrumb li {
+	padding: 6px 3px 3px 25px;
+	line-height: 35px
 }
 
 .category{
 	font-weight: 500;
     line-height: 1.1;
     color: inherit;
-    font-size: 20px;
+    font-size: 2.2em;
+    margin-top:20px;
 }
 
-.line {
-	border: solid 1.2px; 
-	width: 97%;
-}
 
 #search-box {
 	width: 100%;
 	border-collapse: collapse;
 	border-top: 1px solid #ccc;
+	margin-top:50px;
 	margin-bottom: 30px;
 }
 
