--- a/KccBrew/src/main/webapp/resources/css/comm/header.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/header.css
@@ -62,7 +62,8 @@
 	height: 70px;
 	background-color: #ffffff;
 	display: flex;
-	justify-content: space-around;
+	/* justify-content: space-around; */
+	align-items: flex-end;
 }
 
 /********** 로고 *****/
@@ -75,12 +76,13 @@
 }
 /** 로고 이미지 **/
 .nav-bar-brand img{
-	padding-left:25px;
+	/* padding-left:25px; */
 	position:absolute;
 	top:0;
 	left:0;
-	width:200px;
-	height:70px;
+	/* width:200px; */
+	/* height:70px; */
+	height: 90%;
 	cursor: pointer;
 }
 
