--- a/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu.css
@@ -7,7 +7,6 @@
 		height:100%;
 		flex-direction:column;
 		justify-content:space-between;
-		min-height:700px;
 		background-color: #eef4ff;
 		color:#ffffff;
 		box-sizing: border-box;
@@ -63,7 +62,11 @@
 		text-align: center;
 		height:30px;
 	}
-	.toMyPage, .logout {
+	.buttons form {
+		display: inline-block;
+	}
+	
+	#toMyPage, .logout {
 		color:#ffffff;
 		cursor: pointer;
 		font-weight: normal;
@@ -71,7 +74,7 @@
 		margin-bottom: 10px;
 		text-decoration: none;
 	}
-	.toMyPage:hover, .logout:hover {
+	#toMyPage:hover, .logout:hover {
 		text-decoration: underline;
 	}
 	.shortcut-service {
