--- a/KccBrew/src/main/webapp/resources/css/comm/maincontents.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/maincontents.css
@@ -28,7 +28,7 @@
 		border: none;
 	}
 	.body-wrapper{
-		padding:20px 20px;
+		padding:0 20px;
 		padding-bottom: 0;
 		flex-direction: column;
 	    background-color: #eef4ff;
