--- a/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu.css
@@ -28,9 +28,10 @@
 }
 
 .inner-box {
-	padding: 20px;
-	width: 100%;
-	height: 100%;
+    padding: 15px;
+    width: 100%;
+    height: 100%;
+    padding-top: 20px;
 }
 
 .nameAndPhoto {
@@ -95,13 +96,26 @@
 }
 
 .task-title {
-	position: relative;
-	bottom: 30%;
+	background-color: #094188;
+    padding: 10px;
+    border-radius: 15px;
+    top:40%;
+}
+
+.admin-task-value {
+    top: 20%;
+    font-size: 25px;
+    color: white;
+    text-decoration: none;
+    position: relative;
 }
 
 .admin-task span {
 	position: relative;
-	top: 30%;
+}
+
+.font-bold {
+	font-weight: bold;
 }
 
 }
@@ -125,6 +139,9 @@
 .buttons {
 	text-align: center;
 	height: 30px;
+	display: flex;
+	align-items: baseline;
+	justify-content: center;
 }
 
 .toMyPage, .logout {
@@ -136,8 +153,14 @@
 	text-decoration: none;
 }
 
-.toMyPage:hover, .logout:hover {
+.toMyPage:hover, .logout:hover, #toMyPage:hover, .admin-task-value :hover {
 	text-decoration: underline;
+	font-weight: bold;
+}
+
+#toMyPage {
+	color: white;
+	text-decoration: none;
 }
 
 .shortcut-service {
