feat : 전체 회원 타입 프로필 완료 / 2023-09-27 이세은

--- a/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu.css
@@ -65,7 +65,7 @@
 	text-align: center;
 	font-size: 19px;
 	font-weight: 600;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 }
 
 .user-info-wrapper span {
@@ -76,6 +76,26 @@
 	display: block;
 	font-size: 15px;
 	margin-top: 10px;
+	line-height: 1.5;
+}
+
+.user-info {
+	    margin-bottom: 10px;
+}
+
+.user-info > div {
+	display: flex;
+        align-items: baseline;
+}
+
+.user-info-index {
+	    background-color: #094188;
+	    border-radius: 15px;
+	    padding: 7px;
+	    width:30%;
+	    text-align: center;
+	        margin-right: 5px;
+    margin-bottom: 3px;
 }
 
 .user-task-wrapper {
@@ -91,18 +111,20 @@
 	border-bottom: dashed 0.5px #a2c3f5;
 }
 
-.admin-task {
+.user-task {
 	height: 50%;
 }
 
 .task-title {
 	background-color: #094188;
-    padding: 10px;
+    padding: 7px;
     border-radius: 15px;
     top:40%;
+    
+    position: relative;
 }
 
-.admin-task-value {
+.user-task-value {
     top: 20%;
     font-size: 25px;
     color: white;
@@ -110,8 +132,22 @@
     position: relative;
 }
 
-.admin-task span {
+.user-task span {
 	position: relative;
+}
+
+.manager-task {
+	    float: left;
+    width: 50%;
+    height: 50%;
+}
+
+.manager-task-value {
+    top: 20%;
+    font-size: 25px;
+    color: white;
+    text-decoration: none;
+    position: relative;	
 }
 
 .font-bold {
@@ -142,6 +178,7 @@
 	display: flex;
 	align-items: baseline;
 	justify-content: center;
+	margin-bottom: 10px;
 }
 
 .toMyPage, .logout {
@@ -153,7 +190,7 @@
 	text-decoration: none;
 }
 
-.toMyPage:hover, .logout:hover, #toMyPage:hover, .admin-task-value :hover {
+.toMyPage:hover, .logout:hover, #toMyPage:hover, .user-task-value :hover, .manager-task-value:hover {
 	text-decoration: underline;
 	font-weight: bold;
 }
@@ -231,4 +268,9 @@
 	border: 3px solid #1A55A1;
 	color: #111111;
 	border-radius: 10px;
+}
+
+.separator {
+	margin-right: 5px;
+	color: #a2c3f5;
 }
