--- a/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu.css
@@ -17,23 +17,24 @@
 }
 
 .user-profile {
-	height: 500px;
-	margin-bottom: 5px;
+	height: 505px;
+	/* margin-bottom: 0px; */
 	box-sizing: border-box;
-	flex: 1;
-	display: flex;
+	/* flex: 1; */
+	/* display: flex; */
 	flex-direction: column;
 	justify-content: space-between;
 	background-color: #1A55A1;
-	
 	border-radius: 10px;
+	margin-bottom: 10px;
 }
 
 .inner-box {
-    padding: 15px;
-    width: 100%;
-    height: 100%;
-    padding-top: 20px;
+	padding-top: 0px;
+	padding: 15px;
+	width: 100%;
+	padding-top: none;
+	height: 100%;
 }
 
 .nameAndPhoto {
@@ -82,26 +83,26 @@
 }
 
 .user-info {
-	    margin-bottom: 10px;
+	margin-bottom: 10px;
 }
 
-.user-info > div {
+.user-info>div {
 	display: flex;
-        align-items: baseline;
+	align-items: baseline;
 }
 
 .user-info-index {
-	    background-color: #094188;
-	    border-radius: 15px;
-	    padding: 7px;
-	    width:30%;
-	    text-align: center;
-	        margin-right: 5px;
-    margin-bottom: 3px;
+	background-color: #094188;
+	border-radius: 15px;
+	padding: 7px;
+	width: 30%;
+	text-align: center;
+	margin-right: 5px;
+	margin-bottom: 3px;
 }
 
 .user-task-wrapper {
-	height: 200px;
+	height: 210px;
 	text-align: center;
 }
 
@@ -119,19 +120,18 @@
 
 .task-title {
 	background-color: #094188;
-    padding: 7px;
-    border-radius: 15px;
-    top:40%;
-    
-    position: relative;
+	padding: 7px;
+	border-radius: 15px;
+	top: 40%;
+	position: relative;
 }
 
 .user-task-value {
-    top: 20%;
-    font-size: 25px;
-    color: white;
-    text-decoration: none;
-    position: relative;
+	top: 20%;
+	font-size: 25px;
+	color: white;
+	text-decoration: none;
+	position: relative;
 }
 
 .user-task span {
@@ -139,17 +139,17 @@
 }
 
 .manager-task {
-	    float: left;
-    width: 50%;
-    height: 50%;
+	float: left;
+	width: 50%;
+	height: 50%;
 }
 
 .manager-task-value {
-    top: 20%;
-    font-size: 25px;
-    color: white;
-    text-decoration: none;
-    position: relative;	
+	top: 20%;
+	font-size: 25px;
+	color: white;
+	text-decoration: none;
+	position: relative;
 }
 
 .font-bold {
@@ -192,7 +192,7 @@
 	text-decoration: none;
 }
 
-.toMyPage:hover, .logout:hover, #toMyPage:hover{
+.toMyPage:hover, .logout:hover, #toMyPage:hover {
 	text-decoration: underline;
 	font-weight: bold;
 }
@@ -210,44 +210,54 @@
 .shortcut-service {
 	height: 226px;
 	flex: 1;
-	margin-bottom: 5px;
 	color: #111111;
 	background-color: #ffffff;
-	    border-radius: 10px;
+	border-radius: 10px;
 }
 
 .shortcut-service p {
 	text-align: left;
-	font-size: 1.2em;
+	font-size: 14px;
 	font-weight: bold;
 }
 
 .shortcuts {
-	margin-bottom: 10px;
-	color: #717171;
+    padding-bottom: 5px;
+    font-size: 14px;
+    border-bottom: dashed 0.5px #a2c3f5;
+    margin: 5px auto;
+    height: calc(100%/ 3);
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.shortcuts.last {
+	border: none;
 }
 
 .round-btn {
-	display: inline-block;
-	text-align: center;
-	font-size: 0.9em;
-	width: 30px;
-	height: 20px;
-	line-height: 17px;
-	color: #1A55A1;
-	border: 1.5px solid #1A55A1;
-	font-weight: bold;
-	border-radius: 75px/75px;
+width: 20px;
+    margin: 0 20px;
 }
 
 .shortcuts a {
-	font-weight: normal;
-	color: #717171;
-	text-decoration: none;
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
 }
 
 .shortcuts a:hover {
 	text-decoration: underline;
+}
+
+#shortcuts-mark {
+	height: 10%;
+}
+
+.shortcut-list {
+	height: 90%;
 }
 
 .toKccBrew {
@@ -264,6 +274,7 @@
 	transform: translate(-50%, -50%);
 	top: 50%;
 	left: 50%;
+	height: 100%;
 }
 
 .tomainimg {
