--- a/KccBrew/src/main/webapp/resources/css/comm/maincontents-manager.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/maincontents-manager.css
@@ -16,6 +16,10 @@ body {
 	font-size: 14px;
 }
 
+.last {
+	border: none !important;
+}
+
 ul, li {
 	list-style: none;
 }
@@ -183,6 +187,7 @@ button {
 .bottom-menu>div {
 	margin-right: 5px;
 	margin-bottom: 5px;
+	margin-top: 1px;
 }
 
 /************ A/S 일정 **************/
@@ -379,19 +384,90 @@ button {
 
 /************* 교육 ******************/
 #education-mark {
-	float: left;
+	float: right;
 	width: 37%;
-	height: 245px;
-	background-color: antiquewhite;
-	padding: 15px;
+	height: 310px;
+	background-color: lightsteelblue;
+	border-radius: 10px;
+	margin-right: 20px;
+}
+
+#education-mark>img {
+	width: 100%;
+	border-radius: 10px 10px 0 0;
+	height: 80%;
+}
+
+#education-content {
+	display: flex;
+	align-items: center;
+	height: 20%;
+	justify-content: space-between;
+	padding: 0 15px;
+}
+
+#education-content>span {
+	font-size: 15px;
+	font-weight: 600;
+}
+
+#education-content img {
+	width: 20px;
 }
 
 /************* 신청 ******************/
 #application-mark {
-	height: 65px;
-	width: 98%;
-	background-color: burlywood;
+	height: 60px;
+	width: 60%;
+	/* background-color: burlywood; */
+	background-color: white;
 	float: left;
+	border-radius: 10px;
+}
+
+#application-title {
+	width: 27.5%;
+	height: 100%;
+	float: left;
+	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 15px;
+	font-weight: 600;
+	color: white;
+	background-color: navy;
+	border-radius: 10px;
+}
+
+#application-content {
+	width: 70%;
+	height: 100%;
+	float: right;
+	padding: 10px;
+}
+
+#application-content div {
+	float: left;
+	width: 50%;
+	border-right: dashed 0.5px lightgray;
+	height: 100%;
+	font-size: 15px;
+	font-weight: 600;
+	display: flex;
+	align-content: center;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+#application-content>div>a {
+	text-decoration: none;
+	color: black;
+}
+
+#application-content img {
+	width: 25px;
+	height: 25px;
 }
 
 /* 회원가입대기 */
