feat : 수리기사 메인 css 완성 / 2023-09-29 이세은

--- a/KccBrew/src/main/webapp/resources/css/comm/pageSideMenu-admin.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/pageSideMenu-admin.css
@@ -17,13 +17,16 @@
 }
 
 .user-profile {
-    height: 570px;
-    box-sizing: border-box;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #1A55A1;
-    border-radius: 10px;
-    margin-bottom: 10px;
+	height: 505px;
+	/* margin-bottom: 0px; */
+	box-sizing: border-box;
+	/* flex: 1; */
+	/* display: flex; */
+	flex-direction: column;
+	justify-content: space-between;
+	background-color: #1A55A1;
+	border-radius: 10px;
+	margin-bottom: 10px;
 }
 
 .inner-box {
