--- a/KccBrew/src/main/webapp/resources/css/comm/maincontents-mecha.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/maincontents-mecha.css
@@ -16,6 +16,10 @@ body {
 	font-size: 14px;
 }
 
+.last {
+	border: none !important;
+}
+
 ul, li {
 	list-style: none;
 }
@@ -34,6 +38,8 @@ button {
 	padding-bottom: 0;
 	flex-direction: column;
 	background-color: #eef4ff;
+	width: 100%;
+	height: 100%;
 }
 
 /*************** 상단 메뉴 *************************/
@@ -128,9 +134,8 @@ button {
 	top: 0;
 	background-color: #ffffff;
 	height: 35px;
-	
 	background-color: navy;
-    color: white;
+	color: white;
 }
 
 .task-list {
@@ -167,30 +172,45 @@ button {
 	border: none;
 }
 
-.task-list tr:hover {
+.task-list tr:hover, .notice.btm li:hover {
 	background-color: #e4e4e4;
 }
 
 /*********  하단 메뉴   **********/
 .bottom-menu {
+	height: 570px;
 	width: 100%;
 	flex: 0.6;
-	/* display: flex;
-		justify-content: space-between; */
-	/* min-height: 700px; */
-	/* margin-top: 5px; */
+	margin-bottom: 10px;
 }
 
 .bottom-menu>div {
 	margin-right: 5px;
 	margin-bottom: 5px;
+	margin-top: 1px;
+}
+/************ 공지사항 **************/
+.notice.btm {
+	width: 27%;
+}
+
+.notice.btm ul {
+	padding: 10px;
+}
+
+.notice.btm li {
+	height: 33px;
+	line-height: 2;
+	padding-left: 5px;
+	list-style: inside;
 }
 
 /************ A/S 일정 **************/
 .todoAndetc {
 	float: left;
 	width: 37%;
-	height: 250px; flex : 0.498;
+	height: 250px;
+	flex: 0.498;
 	display: flex;
 	flex-direction: column;
 	margin-right: 5px;
@@ -275,10 +295,9 @@ button {
 	/* border-top: 1px solid #c0c0c0; */
 	border-right: 1px solid #c0c0c0;
 	width: calc(100%/ 3);
-	 border-top-right-radius: 10px;
-	 background-color: navy;
+	border-top-right-radius: 10px;
+	background-color: navy;
 }
-
 
 .tabnav li a:before {
 	content: "";
@@ -291,6 +310,7 @@ button {
 
 .tabnav li a.active:before {
 	/* background: #1A55A1; */
+	
 }
 
 .tabnav li a.active {
@@ -312,7 +332,7 @@ button {
 	background: #c7dcf2;
 	/* border-bottom: 1px solid #1A55A1; */
 	color: black;
-	border-top-right-radius : 10px;
+	border-top-right-radius: 10px;
 }
 
 .tabcontent {
@@ -323,9 +343,8 @@ button {
 	border-top: none;
 	font-size: 1.5em;
 	overflow: auto;
-	border-bottom-right-radius : 10px;
-
-border-bottom-left-radius : 10px;
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
 }
 
 .todoetc {
@@ -343,14 +362,12 @@ border-bottom-left-radius : 10px;
 	float: left;
 	width: 60%;
 	height: 500px;
-	
 	padding: 15px;
-    border-radius: 10px;
+	border-radius: 10px;
 }
 
 #calendar-container {
 	height: 100%;
-
 }
 
 #calendar-container>p {
@@ -377,7 +394,96 @@ border-bottom-left-radius : 10px;
 
 .fc .fc-toolbar-title {
 	font-size: 20px !important;
-	    font-weight: 600;
+	font-weight: 600;
+}
+
+/************* 교육 ******************/
+#education-mark {
+	float: right;
+	width: 37%;
+	height: 310px;
+	background-color: lightsteelblue;
+	border-radius: 10px;
+	margin-right: 20px;
+}
+
+#education-mark>img {
+	width: 100%;
+	border-radius: 10px 10px 0 0;
+	height: 80%;
+}
+
+#education-content {
+	display: flex;
+	align-items: center;
+	height: 20%;
+	justify-content: space-between;
+	padding: 0 15px;
+}
+
+#education-content>span {
+	font-size: 15px;
+	font-weight: 600;
+}
+
+#education-content img {
+	width: 20px;
+}
+
+/************* 신청 ******************/
+#application-mark {
+	height: 60px;
+	width: 60%;
+	/* background-color: burlywood; */
+	background-color: white;
+	float: left;
+	border-radius: 10px;
+}
+
+#application-title {
+	width: 27.5%;
+	height: 100%;
+	float: left;
+	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 15px;
+	font-weight: 600;
+	color: white;
+	background-color: navy;
+	border-radius: 10px;
+}
+
+#application-content {
+	width: 70%;
+	height: 100%;
+	float: right;
+	padding: 10px;
+}
+
+#application-content div {
+	float: left;
+	border-right: dashed 0.5px lightgray;
+	height: 100%;
+	font-size: 15px;
+	font-weight: 600;
+	display: flex;
+	align-content: center;
+	justify-content: flex-start;
+	align-items: center;
+	width: 100%;
+}
+
+#application-content>div>a {
+	text-decoration: none;
+	color: black;
+}
+
+#application-content img {
+	width: 25px;
+	height: 25px;
+	margin-right: 15px;
 }
 
 /* 회원가입대기 */
