feat : 관리자 메인 외 페이지 css 완성 / 2023-09-29 이세은

--- a/KccBrew/src/main/webapp/resources/css/comm/header.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/header.css
@@ -54,6 +54,10 @@
 	border: 1px solid #00006f;
 	color:#ffffff;
 }
+
+#header-logout {
+	margin: 0px;
+}
 /********* nav 바 *************/
 .nav-bar{
 	position:relative;
