--- a/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu-admin.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu-admin.css
@@ -226,7 +226,7 @@
     font-size: 14px;
     border-bottom: dashed 0.5px #a2c3f5;
     margin: 5px auto;
-    height: 55px;
+    height: calc(100%/3);
     text-align: center;
     display: flex;
     align-items: center;
