--- a/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu-mecha.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu-mecha.css
@@ -223,7 +223,7 @@
     font-size: 14px;
     border-bottom: dashed 0.5px #a2c3f5;
     margin: 5px auto;
-    height: 55px;
+    height: 50%;
     text-align: center;
     display: flex;
     align-items: center;
