--- a/KccBrew/src/main/webapp/resources/css/asMng/content-template.css
+++ b/KccBrew/src/main/webapp/resources/css/asMng/content-template.css
@@ -26912,11 +26912,11 @@ label {
 	display: inline-block
 }
 
-.breadcrumb>li+li:before {
+/* .breadcrumb>li+li:before {
 	padding: 0 5px;
 	color: #ccc;
 	content: "/\00a0"
-}
+} */
 
 .breadcrumb>.active {
 	color: #777
@@ -47643,11 +47643,11 @@ label {
 	display: inline-block
 }
 
-.breadcrumb>li+li:before {
+/* .breadcrumb>li+li:before {
 	padding: 0 5px;
 	color: #ccc;
 	content: "/\00a0"
-}
+} */
 
 .breadcrumb>.active {
 	color: #777
