feat : 점주, 수리기사 메인 외 페이지 css 완성 / 2023-09-30 이세은

--- a/KccBrew/src/main/webapp/resources/css/comm/pageSideMenu-admin.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/pageSideMenu-admin.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+
+#mainContents {
+margin-left: 200px;
+}
+
 /************* 회원 정보 및 페이지 링크 ******************/
 .profileAndguide {
 	font-family: 'Noto-Sans';
