--- a/KccBrew/src/main/webapp/resources/css/comm/pageSideMenu-mecha.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/pageSideMenu-mecha.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+
+#mainContents {
+	margin-left: 250px;
+}
+
 /************* 회원 정보 및 페이지 링크 ******************/
 .profileAndguide {
 	font-family: 'Noto-Sans';
@@ -13,24 +18,21 @@
 	box-sizing: border-box;
 	/* 추가 / 2023-09-26 이세은  */
 	float: left;
-	width: 20%;
+	width: 250px;
 }
 
 .user-profile {
-    height: 570px;
-    box-sizing: border-box;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #1A55A1;
-    border-radius: 10px;
-    margin-bottom: 10px;
+	height: 600px;
+	box-sizing: border-box;
+	flex-direction: column;
+	justify-content: space-between;
+	background-color: #1A55A1;
 }
 
 .inner-box {
 	padding-top: 0px;
 	padding: 15px;
 	width: 100%;
-	padding-top: none;
 	height: 100%;
 }
 
@@ -49,13 +51,16 @@
 	height: 150px;
 	margin: 0 auto;
 	margin-bottom: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	/* 	flex: 0.4;
 	top: 0; */
 }
 
 .photo-wrapper img {
-	width: 150px;
-	height: 150px;
+	width: 130px;
+	height: 130px;
 	/* position: absolute; */
 	background-color: white;
 	border-radius: 50%;
@@ -98,6 +103,16 @@
 	margin-bottom: 3px;
 }
 
+/* 로그아웃 */
+.inner-box form {
+	margin: 0px;
+}
+
+.inner-box .logout {
+	background-color: transparent;
+	border: 0px;
+}
+
 .user-task-wrapper {
 	height: 210px;
 	text-align: center;
@@ -111,8 +126,13 @@
 	border-bottom: dashed 0.5px #a2c3f5;
 }
 
+.user-task-wrapper>div {
+	padding-bottom: 30px;
+}
+
 .user-task {
 	height: 50%;
+	padding-bottom: 25px;
 }
 
 .task-title {
@@ -189,14 +209,16 @@
 	text-decoration: none;
 }
 
-.toMyPage:hover, .logout:hover, #toMyPage:hover {
-	text-decoration: underline;
-	font-weight: bold;
+.toMyPage:hover, .inner-box .logout:hover, #toMyPage:hover {
+	text-decoration: underline !important;
+	font-weight: bold !important;
+	background-color: transparent !important;
+	color: white;
 }
 
-.user-task-value :hover, .manager-task-value:hover {
+.user-task-value:hover, .manager-task-value:hover {
 	font-weight: bold;
-	color: #2fb3f5;
+	color: rgb(47, 179, 245);
 }
 
 #toMyPage {
@@ -208,26 +230,28 @@
 	height: 226px;
 	flex: 1;
 	color: #111111;
-	background-color: #ffffff;
-	border-radius: 10px;
+	background-color: #b2c0d6;
 }
 
 .shortcut-service p {
 	text-align: left;
 	font-size: 14px;
 	font-weight: bold;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .shortcuts {
-    padding-bottom: 5px;
-    font-size: 14px;
-    border-bottom: dashed 0.5px #a2c3f5;
-    margin: 5px auto;
-    height: 55px;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+	padding-bottom: 5px;
+	font-size: 14px;
+	border-bottom: dashed 0.5px black;
+	margin: 5px auto;
+	height: 55px;
+	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
 }
 
 .shortcuts.last {
@@ -235,14 +259,14 @@
 }
 
 .round-btn {
-width: 20px;
-    margin: 0 20px;
+	width: 20px;
+	margin: 0 20px;
 }
 
 .shortcuts a {
-    font-weight: bold;
-    color: black;
-    text-decoration: none;
+	font-weight: bold;
+	color: black;
+	text-decoration: none;
 }
 
 .shortcuts a:hover {
@@ -250,7 +274,9 @@ width: 20px;
 }
 
 #shortcuts-mark {
-	height: 10%;
+	height: 45px;
+	background-color: white;
+	border-radius: 10px;
 }
 
 .shortcut-list {
