--- a/KccBrew/src/main/webapp/resources/css/statistics/statistics.css
+++ b/KccBrew/src/main/webapp/resources/css/statistics/statistics.css
@@ -111,3 +111,16 @@ a, a:hover, a:visited{
 .breadcrumb{
 	display: flex;
 }
+.download-excel{
+	color:#ccc;
+	cursor:pointer;
+	padding:0px 10px;
+    margin-left: 1100px;
+    font-size: 20px;
+}
+.list-info-div>div{
+	display:flex;
+}
+.download-excel:hover{
+	color:black;
+}
