test : 웹소켓 테스트 중 / 2023-10-02 이세은

--- a/KccBrew/src/main/webapp/resources/css/comm/header.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/header.css
@@ -9,7 +9,7 @@
 .comm-nav {
 	font-family: 'Noto Sans';
 	width: 100%;
-	z-index: 999;
+	z-index: 9;
 	font-size: 1.2em;
 	height: 100px;
 	line-height: 100px;
@@ -29,11 +29,89 @@
 	text-align: right;
 	background-color: #0D406E;
 	margin-top: 0;
+	align-items: center;
 }
 
 .top-bar p {
 	height: 30px;
 }
+
+/****** 알림 *******/
+#notification-list {
+	display: block;
+	width: 300px;
+	position: absolute;
+	max-height: 500px;
+	z-index: 99;
+	overflow-y: auto;
+}
+
+.top-bar>div {
+	width: 20px;
+	height: 20px;
+	margin-right: 5px;
+}
+
+.top-bar>a {
+	width: 100%;
+	display: block;
+	height: 100%;
+}
+
+.top-bar img {
+	width: 100% !important;
+}
+
+.list-group-item.d-flex.justify-content-between.align-items-start {
+	width: 300px;
+	height: 50px;
+	background-color: white;
+}
+
+.list-group {
+	list-style: none;
+	padding: 0;
+}
+
+.list-group-item {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+}
+
+.list-group-item .fw-bold {
+	font-weight: bold;
+}
+
+.badge {
+	background-color: #007bff;
+	border-radius: 50%;
+	width: 30px;
+	height: 30px;
+	text-align: center;
+	font-weight: 600;
+}
+
+.list-group-numbered {
+	counter-reset: li;
+}
+
+.list-group-item::before {
+	content: counter(li);
+	counter-increment: li;
+	margin-right: 10px;
+	font-weight: bold;
+	color: #007bff;
+}
+
+.ms-2.me-auto {
+	display: contents;
+	color: black !important;
+}
+
 /****** 로그아웃 버튼 *******/
 .top-bar form {
 	margin: 0px;
