--- a/KccBrew/src/main/webapp/resources/css/comm/header.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/header.css
@@ -73,9 +73,9 @@
 }
 
 #notification-list {
-	width: 300px;
+	width: 400px;
 	position: absolute;
-	max-height: 500px;
+	max-height: 700px;
 	z-index: 99;
 	overflow-y: auto;
 }
@@ -97,9 +97,14 @@
 }
 
 .list-group-item.d-flex.justify-content-between.align-items-start {
-	width: 300px;
+	width: 400px;
 	height: 50px;
 	background-color: white;
+}
+
+.fw-bold.non-real-time.alarm-title {
+	width: 20%;
+	text-align: center;
 }
 
 .list-group {
@@ -111,11 +116,14 @@
 	display: flex !important;
 	justify-content: space-around !important;
 	align-items: center !important;
-	padding: 10px !important;
+	padding: 5px !important;
 	border: 1px solid #ccc !important;
 	border-radius: 5px !important;
 }
 
+/* .ms-2.me-auto>* {
+	margin-right: 5px;
+} */
 .list-group-item .fw-bold {
 	font-weight: bold;
 }
@@ -138,14 +146,24 @@
 .list-group-item::before {
 	content: counter(li);
 	counter-increment: li;
-	margin-right: 10px;
+	/* 	margin-right: 10px; */
 	font-weight: bold;
 	color: #007bff;
+	width: 10%;
+	text-align: center;
 }
 
 .ms-2.me-auto {
 	display: contents;
 	color: black !important;
+	width: 90%;
+	height: 100%;
+}
+
+.non-real-time.alarm-content {
+	width: 80%;
+	text-align: initial;
+	line-height: initial;
 }
 
 /****** 로그아웃 버튼 *******/
