--- a/KccBrew/src/main/webapp/resources/css/comm/myPage.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/myPage.css
@@ -53,7 +53,9 @@ button {
 	color: #666;
 	display: block;
 	white-space: nowrap;
-	text-overflow: ellipsis
+	text-overflow: ellipsis;
+	padding: 6px 3px 3px 25px;
+	line-height: 35px
 }
 .container2 .page-content-navigation .breadcrumb li:first-child {
 	background: none;
@@ -70,8 +72,6 @@ button {
 }
 
 .container2 .page-content-navigation .breadcrumb li {
-	padding: 6px 3px 3px 25px;
-	line-height: 35px
 }
 
 .category{
@@ -149,6 +149,7 @@ input[type="text"] {
     border-radius: 5px; 
 }
 
+
 .modButtons {
 	width: 100%;
 	height:24px;
@@ -156,9 +157,9 @@ input[type="text"] {
 	text-align: center;
 	padding: 0 30px;
 	text-decoration: none;
-	
+	margin-top: 20px;
 }
-#changeImageBtn, #confirmImgChg {
+#changeImageBtn{
 	font-family: 'Noto Sans';
 	font-size:14px;
 	position:relative;
@@ -171,7 +172,6 @@ input[type="text"] {
 	border-radius: 4px;
 	display:inline-block;
 	text-decoration: none;
-	margin-right: 10px;
 }
 
 #changeImageBtn:hover {
@@ -179,8 +179,7 @@ input[type="text"] {
 	color: #111111;
 }
 
-.updateBtn, #confirmMod, .cancel {
-	margin-right:10px;
+.updateBtn, #confirmModBtn, .cancel ,#confirmModExceptImgBtn{
 	background-color: navy;
 	color: #ffffff;
 	border: none;
@@ -189,10 +188,15 @@ input[type="text"] {
 	display:inline-block;
 	align-items: center;
 	text-decoration: none;
+	position: relative;
+	margin-right: 20px;
 }
-.updateBtn:hover, #confirmMod:hover, .cancel:hover, #confirmImgChg:hover {
+.updateBtn:hover, #confirmModBtn:hover, .cancel:hover, #confirmImgChg:hover, #confirmModExceptImgBtn:hover {
 	background-color: #E6E6E6;
 	color: #111111;
+}
+#confirmModBtn {
+	display: none;
 }
 
 /*  비밀번호 수정 페이지 */
